--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ authors=["James Muriuki Maina <geniusinrust@gmail.com>"]
 [dependencies]
 bracket-lib = "0.8.7"
 legion = "0.4.0"
+ron = "0.12.0"
+serde = "1.0.228"
